# 005

./: 404.html  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  magic.md
magic/: index.html
search/: search_index.json
